GearsetPOC/force-app/main/default/objects/eins_EinsteinPlatformSetting__mdt/eins_EinsteinPlatformSetting__mdt.object-meta.xml
<CustomObject>
    <label>eins_Einstein_Platform_Setting</label>
    <pluralLabel>eins_EinsteinPlatformSetting</pluralLabel>
</CustomObject>