GearsetPOC/force-app/main/default/objects/eins_EinsteinPlatformSetting__mdt/fields/eins_LanguageCodes__c.field-meta.xml
<CustomField>
    <fullName>eins_LanguageCodes__c</fullName>
    <description>Codes that used in Case field Language Code - English, Dutch, French languages</description>
    <inlineHelpText>Codes that used in Case field Language Code - English, Dutch, French languages. Example: &#39;en;nl;fr&#39;</inlineHelpText>
    <label>LanguageCodes</label>
    <type>TextArea</type>
</CustomField>