GearsetPOC/force-app/main/default/objects/eins_EinsteinPlatformSetting__mdt/fields/Email_login__c.field-meta.xml
<CustomField>
    <fullName>Email_login__c</fullName>
    <label>Email_login</label>
    <type>Email</type>
</CustomField>