GearsetPOC/force-app/main/default/objects/eins_EinsteinPlatformSetting__mdt/fields/ModelId_dutch__c.field-meta.xml
<CustomField>
    <fullName>ModelId_dutch__c</fullName>
    <label>ModelId_dutch</label>
    <type>TextArea</type>
</CustomField>