GearsetPOC/force-app/main/default/objects/eins_EinsteinPlatformSetting__mdt/fields/ModelId_fr__c.field-meta.xml
<CustomField>
    <fullName>ModelId_fr__c</fullName>
    <label>ModelId_fr</label>
    <type>TextArea</type>
</CustomField>